k8s/apps/memos/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-notes.lly.sh
      hosts:
        - notes.lly.sh
        - notes.ftsell.de
  rules:
    - host: notes.lly.sh
      http: &http
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos-server
                port:
                  name: http
    - host: notes.ftsell.de
      http: *http
